--- a/style.css
+++ b/style.css
@@ -48,6 +48,10 @@ body {
   transition: all 0.3s ease;
 }
 
+.card.hover {
+  background-color: tomato;
+}
+
 .card:hover {
   z-index: 2;
   transform: translateY(-50px);
