--- a/style.css
+++ b/style.css
@@ -35,11 +35,42 @@ body {
   transform: rotate(180deg);
 }
 
+.win-stack {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  left: 0;
+  top: 0;
+  margin-right: 2rem;
+  margin-top: -5.5rem;
+}
+
+.win-stack div {
+  height: 75px;
+  width: 75px;
+  margin-right: 0.5rem;
+  border: 1px solid black;
+  border-radius: 0.5rem;
+}
+
+.win-stack .card {
+  height: 75px;
+  width: 75px;
+  margin-left: 0;
+  border-radius: 0.5rem;
+}
+
+.win-stack .golden-troop {
+  background-color: gold;
+}
+
 .stack {
   padding-left: 4rem;
   display: flex;
   justify-content: center;
   align-items: flex-end;
+  position: relative;
 }
 
 .card {
