--- a/style.css
+++ b/style.css
@@ -49,12 +49,11 @@ body {
   background-color: black;
 }
 
-.health, .health::before {
+.health, .bar {
   border-radius: 1rem;
 }
 
-.health::before {
-  content: '';
+.health .bar {
   width: 100%;
   height: 100%;
   position: absolute;
