--- a/style.css
+++ b/style.css
@@ -10,6 +10,15 @@ body {
   overflow: hidden;
 }
 
+.game-over {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-color: aqua;
+}
+
 .container {
   width: 100%;
   height: 100%;
@@ -24,7 +33,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: blanchedalmond;
 }
 
 .choices {
@@ -59,7 +67,6 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 2;
   background-color: green;
 }
 
