--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
   position: absolute;
   left: 0;
   top: 0;
-  background-color: aqua;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .container {
