--- a/style.css
+++ b/style.css
@@ -92,10 +92,6 @@ body {
   border-radius: 0.5rem;
 }
 
-.win-stack .golden-troop {
-  background-color: gold;
-}
-
 .stack {
   padding-left: 4rem;
   display: flex;
@@ -110,6 +106,7 @@ body {
   margin-left: -4rem;
   padding: 1.25rem 0.75rem;
   display: inline;
+  position: relative;
   background-color: black;
   color: white;
   border: 1px solid white;
@@ -132,6 +129,26 @@ body {
   z-index: 2;
   background-color: tomato;
   transform: translateY(0);
+}
+
+.card.hide::before {
+  content: '';
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  position: absolute;
+  left: 0;
+  top: 0;
+  border-radius: inherit;
+  background-color: inherit;
+}
+
+#top .card {
+  cursor: default;
+}
+
+#top .win-stack .card {
+  transform: rotate(180deg);
 }
 
 #test-btn {
