--- a/style.css
+++ b/style.css
@@ -86,6 +86,11 @@ button {
   flex-direction: column;
 }
 
+.inputs {
+  display: flex;
+  justify-content: center;
+}
+
 .main-menu .btn {
   margin: 0.5rem 0;
 }
@@ -145,7 +150,10 @@ button {
   align-items: center;
 }
 
-
+.winner-text {
+  text-align: center;
+  margin-bottom: 2rem;
+}
 
 .choices {
   margin: 0 5rem;
